-
Bug
-
Resolution: Done
-
P2: Important
-
5.5.0 Beta
-
None
-
mac os 10.10.3, latest Xcode
this line will correctly build my app without signing:
macdeployqt Webshots.app -executable=Webshots.app/Contents/MacOS/Webshots
this line gives the following error:
macdeployqt Webshots.app -executable=Webshots.app/Contents/MacOS/Webshots -codesign="Developer ID Application"
ERROR: Codesign signing error:
ERROR: "Warning: usage of --preserve-metadata with option "resource-rules" (deprecated in Mac OS X >= 10.10)!
/development/_build_desktop/Webshots.app/Contents/MacOS/Webshots: unsealed contents present in the bundle root"
this codesign command works fine with WebKit.
For Gerrit Dashboard: QTBUG-50636 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
147453,4 | Fix macdeployqt to properly sign inner bundles. | 5.6.0 | qt/qttools | Status: MERGED | +2 | 0 |
147552,3 | Remove deprecated signing option that causes warnings. | 5.6.0 | qt/qttools | Status: MERGED | +2 | 0 |